objects/Veda_Fraud_Bureau_Result__c.object
<CustomObject>
    <fields>
        <fullName>Bureau_File_Create_Date__c</fullName>
        <label>Bureau File Create Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bureau_Report_Type__c</fullName>
        <label>Bureau Report Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bureau_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bureau Report</label>
        <referenceTo>Veda_Fraud_Bureau_Report__c</referenceTo>
        <relationshipName>Bureau_Resulta</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bureau_Result_Type__c</fullName>
        <label>Bureau Result Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Point_Identifier_Indicator__c</fullName>
        <label>Delivery Point Identifier Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Indicator__c</fullName>
        <label>Score Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda Fraud Bureau Result</label>
    <nameField>
        <label>Bureau Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Fraud Bureau Result</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>